Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -43,13 +43,32 @@
   <label for="preferencia">Selecciona como deseas recibir la consulta:</label>
   <select name="preferencia" id="preferencia" required>
     <option value="">Selecciona una opción</option>
-    <option value="mesoterapia">En casa</option>
-    <option value="plasma">En consultorio</option>
+    <option value="En casa">En casa</option>
+    <option value="En consultorio">En consultorio</option>
+  </select>
+  <br><br>
+         <!-- Menú desplegable 2 -->
+  <label for="preferencia">Tratemiento deseado:</label>
+  <select name="preferencia" id="preferencia" required>
+    <option value="">Selecciona una opción</option>
+    <option value="mesoterapia">Mesoterapia</option>
+    <option value="plasma rico en plaquetas">Plasma rico en plaquetas</option>
+    <option value="Tratamiento farmacológico">Tratamiento farmacológico</option>
+    <option value="Toxina botulínica">Toxina botulínica</option>
+    <option value="Ácido hialurónico">Ácido hialurónico</option>
+    <option value="Hidratación facial inyectable">Hidratación facial inyectable</option>
+    <option value="Skin care">Skin care</option>
+    <option value="Camuflaje de cicatrices">Camuflaje de cicatrices</option>
+    <option value="Micropigmentación Labios">Micropigmentación Labios</option>
+    <option value="Micropigmentación estrías">Micropigmentación estrías</option>
+    <option value="Micropigmentación vitiligo">Micropigmentación vitiligo</option>
+    <option value="Micropigmentación cejas">Micropigmentación cejas</option>
+    <option value="Micropigmentación Labios">Micropigmentación Labios</option>
+    <option value="reconstrucción de areolas">reconstrucción de areolas</option>
   </select>
   <br><br>
         <div class="botones">
           <button type="submit">Enviar</button>
-          <button type="submit">Escríbenos por WhatsApp</button>
         </div>
       </form>
     </div>
