Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -48,6 +48,27 @@
             
             <label for="correo">Escribe tu correo</label>
             <input type="text" id="correo" name="correo" required>
+
+               <!-- Menú desplegable 2 -->
+  <label for="preferencia">Tratemiento deseado:</label>
+  <select name="preferencia" id="preferencia" required>
+    <option value="">Selecciona una opción</option>
+    <option value="mesoterapia">Mesoterapia</option>
+    <option value="plasma rico en plaquetas">Plasma rico en plaquetas</option>
+    <option value="Tratamiento farmacológico">Tratamiento farmacológico</option>
+    <option value="Toxina botulínica">Toxina botulínica</option>
+    <option value="Ácido hialurónico">Ácido hialurónico</option>
+    <option value="Hidratación facial inyectable">Hidratación facial inyectable</option>
+    <option value="Skin care">Skin care</option>
+    <option value="Camuflaje de cicatrices">Camuflaje de cicatrices</option>
+    <option value="Micropigmentación Labios">Micropigmentación Labios</option>
+    <option value="Micropigmentación estrías">Micropigmentación estrías</option>
+    <option value="Micropigmentación vitiligo">Micropigmentación vitiligo</option>
+    <option value="Micropigmentación cejas">Micropigmentación cejas</option>
+    <option value="Micropigmentación Labios">Micropigmentación Labios</option>
+    <option value="reconstrucción de areolas">reconstrucción de areolas</option>
+  </select>
+  <br><br>
             
             <div class="botones">
               <button type="submit">Envíar</button>
