--- a/Index.html
+++ b/Index.html
@@ -74,12 +74,28 @@
         </section>
     </main>
 </body>
-    <footer id="TyC">
-        <table>
-            <tr>
-                <td><p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p></td>
-                <td><button><a href="TyC.html">Términos y condiciones</a></button></td>
-            </tr>
-        </table>
-    </footer> 
+<footer id="TyC">
+  <table>
+    <tr>
+      <td>
+        <p>2025 Dra. Jenny Sarmiento. Todos los derechos reservados</p>
+      </td>
+      <td>
+        <button><a href="TyC.html">Términos y condiciones</a></button>
+      </td>
+      <td class="redes-sociales">
+        <a href="https://www.instagram.com/drajennysarmiento_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw== target="_blank">
+          <img src="Images/Instagram.png" alt="Instagram" class="icono-red">
+        </a>
+        <a href="https://www.facebook.com/jenny.a.sarmiento.9" target="_blank">
+          <img src="Images/Facebook.png" alt="Facebook" class="icono-red">
+        </a>
+        <a href="https://api.whatsapp.com/send?phone=3189004216" target="_blank">
+          <img src="Images/Whattsapp.png" alt="WhatsApp" class="icono-red">
+        </a>
+      </td>
+    </tr>
+  </table>
+</footer>
+ 
 </html>
