--- a/Micropigmentación.html
+++ b/Micropigmentación.html
@@ -26,13 +26,15 @@
       </div>
     </header>
     <!-- Micropigmentación izquierda -->
+     <div class="titulo-principal">
+       <h1>Micropigmentación y Microblanding</h1>
+     </div>
     <section class="bloque-tratamiento-con-imagen-verde">
         <div class="imagen-externa"> 
             <img src="Images/Cicatrices.png" alt="Camuflaje de cicatrices">
         </div>
         <div class="bloque-tratamiento">
              <div class="texto">
-     <h1>Micropigmentación y Microblanding</h1>
         <h3>Camuflaje de cicatrices</h3>
         <p>El camuflaje de cicatrices es un
             procedimiento diseñado para
