Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -72,7 +72,7 @@
             
             <div class="botones">
               <button type="submit">Envíar</button>
-             <a href="https://www.instagram.com/drajennysarmiento_?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw== target="_blank">
+             <a href="https://api.whatsapp.com/send?phone=3189004216" target="_blank">
               <button type="button">O escríbenos por WhatsApp</button>
              </a>
             </div>
