Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -36,8 +36,6 @@
         </section>
         </div>
          <div class="titulo-principal">
-        <h1>¿Tienes preguntas? Hablemos</h1>
-        </div>
             <!--Mapa del consultorio-->
         <section id="Encuentranuestroconsultorio">
             <div class="titulo-principal">
@@ -52,6 +50,9 @@
             referrerpolicy="no-referrer-when-downgrade">
   </iframe>
         </section>
+        <div class="titulo-principal">
+        <h1>¿Tienes preguntas? Hablemos</h1>
+        </div>
         <!-- Formulario de contacto -->
         <div class="Contenedor-formulario">
           <form action="FormService" method="post">
