Sobre la doctora.html

--- a/Sobre la doctora.html
+++ b/Sobre la doctora.html
@@ -25,6 +25,15 @@
             </ul>
           </div>
         </header>
+        <!--Banner-->
+    <main>
+        <section id="Banner">
+          <img src="Images/Banner_sobre_la_doctora.png" alt="Banner Dra. Jenny Sarmiento">
+          <div class="contenido-banner">
+            <a href="Agenda tu cita.html" class="boton-banner">Consulta aquí</a>
+          </div>
+        </section>
+      </main>
         <!-- Presentación de la doctora -->
         <div class="contenedor-presentacion">
         <section id="presentacion-doctora">
