Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -25,6 +25,9 @@
         </ul>
       </div>
     </header>
+  <section id="Banner">
+          <img src="Images/Images/Banner_citas.png" alt="Banner llamado a citas">
+        </section>
   <!-- Título principal -->
   <div class="titulo-principal">
     <h1>Escríbenos y agenda tu cita</h1>
