Agenda tu cita.html

--- a/Agenda tu cita.html
+++ b/Agenda tu cita.html
@@ -26,7 +26,7 @@
       </div>
     </header>
   <section id="Banner">
-          <img src="Images/Images/Banner_citas.png" alt="Banner llamado a citas">
+          <img src="Images/Banner_citas.png" alt="Banner llamado a citas">
         </section>
   <!-- Título principal -->
   <div class="titulo-principal">
