Bienestar capilar.html

--- a/Bienestar capilar.html
+++ b/Bienestar capilar.html
@@ -25,6 +25,9 @@
         </ul>
       </div>
     </header>
+     <section id="Banner">
+          <img src="Images/Banner_capilar.png" alt="Banner tratamiento capilar">
+        </section>
     <div class="titulo-principal">
         <h1>Bienestar Capilar</h1>
     </div>
