Bienestar facial.html

--- a/Bienestar facial.html
+++ b/Bienestar facial.html
@@ -25,6 +25,9 @@
         </ul>
       </div>
     </header>
+     <section id="Banner">
+          <img src="Images/Banner_Facial.png" alt="Banner bienestar facial">
+        </section>
     <div class="titulo-principal">
     <h1>Armonización facial</h1>
     </div>
