--- a/Micropigmentación.html
+++ b/Micropigmentación.html
@@ -25,6 +25,9 @@
         </ul>
       </div>
     </header>
+    <section id="Banner">
+          <img src="Images/Banner_micro.png" alt="Banner micropigmentación y microblanding">
+        </section>
     <!-- Micropigmentación izquierda -->
      <div class="titulo-principal">
        <h1>Micropigmentación y Microblanding</h1>
